[gd_scene load_steps=5 format=3 uid="uid://2eht3oy7vjuj"]

[ext_resource type="Script" uid="uid://cw67h1kyp2yad" path="res://Objects/tutorial_trigger.gd" id="1_1ix8a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k1i4s"]
size = Vector2(48, 48)

[sub_resource type="LabelSettings" id="LabelSettings_1ix8a"]
font_size = 12

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ix8a"]
size = Vector2(28.25, 25.5)

[node name="TutorialTrigger" type="Area2D"]
collision_layer = 0
script = ExtResource("1_1ix8a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k1i4s")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 50.0
text = "Press space to jump.\\Hold it to jump higher."
label_settings = SubResource("LabelSettings_1ix8a")
horizontal_alignment = 1
paragraph_separator = "\\"

[node name="CompletionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CompletionArea"]
shape = SubResource("RectangleShape2D_1ix8a")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
